# slice-stellar

./: .dockerignore  .env.example  .gitignore  .repomixignore  AGENTS.md  BUILD_STATUS.md  Cargo.toml  Dockerfile  EVM_ABSTRACTION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PLUGIN_IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  README_STAKING.md  REPO.md  SOROBAN_IMPLEMENTATION.md  STAKING_IMPLEMENTATION.md  docker-compose.yml  eslint.config.mjs  fix-evm-imports.sh  minikit.config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: docker.yml
contracts/: Cargo.toml  Dockerfile  README.md  Slice.sol  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml
contracts/contracts/: Slice.sol  Slice.t.sol
contracts/contracts/slice/: Slice.sol  SliceV2.sol
contracts/contracts/slice/Interfaces/: ISlice.sol
contracts/deploy/: 01_deploy_slice.ts  deploy.ts
contracts/scripts/: generate-wallet.ts
contracts/slice/: Cargo.toml
contracts/slice/.config/stellar/contract-ids/: slice.json
contracts/slice/src/: error.rs  lib.rs  mnemonic_generator.rs  storage.rs  test.rs  test_staking.rs  test_token.rs  types.rs  xlm.rs
contracts/test/: Slice.ts
public/: manifest.json
scripts/: test-soroban-hooks.ts
src/: middleware.ts  proxy.ts
src/adapters/: beexo.ts  web.ts
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/assign-dispute/: page.tsx
src/app/beexo/: page.tsx
src/app/category-amount/: page.tsx
src/app/create/: page.tsx
src/app/debug/: page.tsx
src/app/juror/: page.tsx
src/app/manage/: page.tsx
src/app/my-votes/: page.tsx
src/app/profile/: page.tsx
src/app/xo-connect/: page.tsx
src/blockchain/: hooks.ts  index.ts  types.ts
src/blockchain/plugins/: mock.tsx  stellar.tsx  stellarAdapter.tsx
src/components/: AutoConnect.tsx  ConnectButton.tsx  SuccessAnimation.tsx  XOConnectButton.tsx
src/components/auth/: LoginModal.tsx
src/components/category-amount/: SelectAmount.tsx
src/components/claimant-evidence/: ClaimantInfoCard.tsx
src/components/core/: morphing-dialog.tsx
src/components/create/: ADDRESS_BOOK.md  PartySelector.tsx  SelectParty.tsx  StepBasics.tsx  StepEvidence.tsx  StepParties.tsx  StepReview.tsx  WizardProgress.tsx  (+2 more)
src/config/: app.ts  beexoConfig.ts  chains.ts  contacts.ts  contracts.ts  index.ts  stellar.ts  tenant.ts
src/contexts/: Provider.tsx
src/contracts/: slice-abi.ts
src/hooks/: useAddressBook.ts  useAllDisputes.ts  useAssignDispute.ts  useContractTx.ts  useCreateDispute.ts  useDisputeList.ts  useDisputeParties.ts  useExecuteRuling.ts  useGetDispute.ts  useJurorStats.ts  useMyDisputes.ts  usePayDispute.ts  useReveal.ts  useSendFunds.ts  useSendFunds.tsx  useSliceContract.ts  useSliceVoting.ts  useStakingToken.ts  useTokenBalance.ts  useWithdraw.ts  useXoConnect.ts
src/lib/: supabase-server.ts  webauthn.ts
src/providers/: ConnectProvider.tsx  Provider.tsx  XOContractsProvider.tsx
src/types/: xo-connect.d.ts
src/util/: address.ts  config.ts  disputeAdapter.ts  ethers-adapter.ts  sorobanClient.ts  sorobanTx.ts  storage.ts  votingUtils.ts
src/wagmi/: xoConnector.ts
(+113 files in other folders)
