[workspace]
members = ["slice"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Godsmiracle001/slice-stellar"

[workspace.dependencies]
soroban-sdk = { version = "23.1.0", default-features = false }
stellar-registry = "0.0.5"
sha2 = { version = "0.10", default-features = false }
stellar-xdr = "24.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
