[package]
name = "slice"
description = "Slice - Sistema de resolución de disputas Kleros-like con voto privado ZK"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, default-features = false, features = ["alloc"] }
stellar-registry.workspace = true
sha2.workspace = true

[dev-dependencies]
stellar-xdr = { workspace = true, features = ["curr", "serde"] }
soroban-sdk = { workspace = true, features = ["testutils"] }

