[package]
name = "slice"
description = "Slice - Sistema de resolución de disputas Kleros-like con voto privado ZK"
edition = "2021"
license = "MIT"
repository = "https://github.com/Godsmiracle001/slice-stellar"
publish = false
version = "0.1.0"

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "23.1.0", default-features = false, features = ["alloc"] }
stellar-registry = "0.0.5"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
stellar-xdr = { version = "24.0.0", features = ["curr", "serde"] }
soroban-sdk = { version = "23.1.0", features = ["testutils"] }

