[package]
name = "slice"
description = "Slice - Sistema de resolución de disputas Kleros-like con voto privado ZK"
edition = "2021"
license = "MIT"
repository = "https://github.com/slice-protocol/slice-stellar"
publish = false
version = "0.1.0"

[package.metadata.stellar]
cargo_inherit = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.0.2", default-features = false, features = ["alloc"] }
stellar-registry = "0.0.5"
sha2 = { version = "0.10", default-features = false }
bip39 = { version = "2.2.2", default-features = false, features = ["alloc"] }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "25.0.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

